--- a/scripts/tts/welcome/speech_processing.yaml
+++ b/scripts/tts/welcome/speech_processing.yaml
@@ -4,6 +4,7 @@ speech_processing:
       entity_id:
         - media_player.hallen
         - media_player.kitchen_mini
+        - media_palyer.tts
       data:
         volume_level: 0.5
     - service: media_player.play_media
