--- a/automations/tts/welcome_home.yaml
+++ b/automations/tts/welcome_home.yaml
@@ -47,3 +47,5 @@ action:
         {{greeting_sentence(person)}}
       call_responsibilities: 1
       call_inspirational_quote: 1
+      call_arsdag: 1
+      call_fodelsedag: 1
