--- a/lovelace/home.yaml
+++ b/lovelace/home.yaml
@@ -1,14 +1,8 @@
 title: Hem
 id: hem
 icon: mdi:home
-background: center / cover no-repeat url("/local/habakgrounds.jpg")
+background: center / cover no-repeat url('/local/habakgrounds.jpg')
 cards:
-#      - type: custom:compact-custom-header
-#        main_config: true
-#        menu: overflow
-#        options: clock
-#        voice: hide
-#        clock_format: 24
   - id: 4db5c4664f0a4458949aec3651e4d7a6  # Automatically created id
     type: vertical-stack
     cards:
@@ -145,13 +139,6 @@ cards:
   - id: 3870fdc794274f17b84dd6ced631b737  # Automatically created id
     type: iframe
     url: https://embed.windy.com/embed2.html
-#      - id: 37279816181f442eac853b132142141  # Automatically created id
-#        type: entities
-#        title: Rum lokalisering
-#        show_header_toggle: false
-#        entities:
-#          - sensor.oskar_bluetooth
-#          - sensor.bella_bluetooth
   - id: 2bf8ccbc1f664c23b10b6533ae82f7e2  # Automatically created id
     type: weather-forecast
     entity: weather.smhi_vader
