--- a/lovelace/information.yaml
+++ b/lovelace/information.yaml
@@ -1,7 +1,7 @@
 title: Information
 id: information
 icon: mdi:information
-background: center / cover no-repeat url("/local/habakgrounds.jpg")
+background: center / cover no-repeat url('/local/habakgrounds.jpg')
 cards:
  - type: custom:google-keep-card
    entity: sensor.google_keep_6632ccac8a
