--- a/automations/house/alarm/away_mdoe_armed.yaml
+++ b/automations/house/alarm/away_mdoe_armed.yaml
@@ -7,13 +7,13 @@ trigger:
   to: 'armed_away'
 action:
   - service: tts.google_translate_say
-    entity_id: media_player.hallen
+    entity_id: media_player.tts
     data:
       message: Larmet har aktiverats som borta läge. Hejdå.
   - service: media_player.volume_set
-    entity_id: media_player.whole_house
+    entity_id: media_player.tts
     data:
-      volume_level: '0.2'
+      volume_level: '0.5'
   - delay: '00:00:05'
   - service: lock.lock
     entity_id: lock.polycontrol_danalock_v3_btze_locked
