--- a/automations/house/alarm/away_mode_arming.yaml
+++ b/automations/house/alarm/away_mode_arming.yaml
@@ -7,10 +7,10 @@ trigger:
   to: pending 
 action:
   - service: media_player.volume_set
-    entity_id: media_player.whole_house
+    entity_id: media_player.tts
     data:
-      volume_level: '0.2'
+      volume_level: '0.5'
   - service: tts.google_translate_say
-    entity_id: media_player.hallen
+    entity_id: media_player.tts
     data:
       message: Larmet har aktiverats. Se till så alla fönster och dörrar är stängda.
