--- a/automations/house/alarm/triggered.yaml
+++ b/automations/house/alarm/triggered.yaml
@@ -9,11 +9,11 @@ action:
   - service: script.turn_on
     entity_id: script.flash_lights
   - service: media_player.volume_set
-    entity_id: media_player.hallen
+    entity_id: media_player.tts
     data:
-      volume_level: '0.5'
+      volume_level: '0.8'
   - service: media_player.play_media
-    entity_id: media_player.hallen
+    entity_id: media_player.tts
     data:
       media_content_id: !secret content_alarm_mp3
       media_content_type: audio/mp3
