--- a/automations/house/alarm/warning.yaml
+++ b/automations/house/alarm/warning.yaml
@@ -7,11 +7,11 @@ trigger:
   to: warning
 action:
   - service: media_player.volume_set
-    entity_id: media_player.whole_house
+    entity_id: media_player.tts
     data:
-      volume_level: '0.2'
+      volume_level: '0.5'
   - service: tts.google_translate_say
-    entity_id: media_player.hallen
+    entity_id: media_player.tts
     data:
       message: Hej, Larmet har utlösts. Var vänlig avaktivera!
   - service: notify.adults
