--- a/automations/tts/eves_gymnastics.yaml
+++ b/automations/tts/eves_gymnastics.yaml
@@ -14,6 +14,6 @@ condition:
       - mon
 action:
   - service: tts.google_translate_say
-    entity_id: media_player.hallen
+    entity_id: media_player.tts
     data:
      message: "PÅMINNELSE! Kom ihåg gymnastikkläderna!"
