--- a/automations/tts/good_morning_weeks.yaml
+++ b/automations/tts/good_morning_weeks.yaml
@@ -20,19 +20,18 @@ action:
   - delay: '00:00:30'
   - service: media_player.volume_set
     entity_id:
-    - media_player.hallen
-    - media_player.kitchen_speaker
+    - media_player.tts
     data:
       volume_level: 0.15
   - service: media_player.play_media
     data:
       entity_id:
-        - media_player.hallen
+        - media_player.tts
         - media_player.kitchen_speaker
       media_content_id: !secret content_silence_mp3
       media_content_type: music
   - service: tts.google_translate_say
-    entity_id: media_player.hallen
+    entity_id: media_player.tts
     data:
      message: Godmorgon, hoppas ni får en trevlig dag.
   - delay: '00:00:05'       
