--- a/automations/tts/milla_dog_food.yaml
+++ b/automations/tts/milla_dog_food.yaml
@@ -16,21 +16,21 @@ condition:
 action:
   - service: media_player.volume_set
     entity_id:
-    - media_player.hallen
+    - media_player.tts
     data:
       volume_level: 0.5
   - service: media_player.play_media
     data:
       entity_id:
-        - media_player.hallen
+        - media_player.tts
       media_content_id: !secret content_silence_mp3
       media_content_type: music
   - service: tts.google_translate_say
-    entity_id: media_player.hallen
+    entity_id: media_player.tts
     data:
      message: 'Notera! Kom ihåg att Milla ska ha mat snart!'
   - service: tts.google_translate_say
-    entity_id: media_player.hallen
+    entity_id: media_player.tts
     data:
      message: 'Notera! Kom ihåg att Milla ska ha mat snart!'
   - service: notify.adults
