--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -11,6 +11,8 @@ resources:
     type: js
   - url: /community_plugin/lovelace-fold-entity-row/fold-entity-row.js
     type: js
+  - url: /local/auto-entities.js
+    type: module
   - url: /customcards/custom-lovelace/swipe-card/swipe-card.js
     type: module
   - url: /community_plugin/upcoming-media-card/upcoming-media-card.js
@@ -54,6 +56,7 @@ views:
 #  - !include lovelace/cameras.yaml
   - !include lovelace/automations.yaml
   - !include lovelace/alarm.yaml
+  - !include lovelace/floorplan.yaml
 
 
 
