:wrench: made a dumb kettle smart and added some floorplan stuff

--- a/components/input_selects/floorplan_floor.yaml
+++ b/components/input_selects/floorplan_floor.yaml
@@ -3,6 +3,6 @@ floorplan_floor:
   options:
     - "Entréplan"
     - "Källarplan"
-    - "Övreplan"
+    - "Övervåning"
   initial: "Entréplan"
   icon: mdi:floor-plan
