--- a/customizations/entities/switch.fibaro_wall_plug_2_switch.yaml
+++ b/customizations/entities/switch.fibaro_wall_plug_2_switch.yaml
@@ -1,3 +1,3 @@
 switch.fibaro_wall_plug_2_switch:
-  friendly_name: "Theus ljusslinga"
-  icon: mdi:toggle-switch
+  friendly_name: Vattenkokaren
+  icon: mdi:power
