--- a/lovelace/floorplan_källarplan.yaml
+++ b/lovelace/floorplan_källarplan.yaml
@@ -113,8 +113,8 @@ elements:
       entity_id: input_select.floorplan_floor
       option: Entréplan
     style:
-      top: 5%
-      left: 10%
+      top: 20%
+      left: 50%
       background: "#d8d7d9"
       border-radius: 5%
       border: 2px solid black
@@ -124,10 +124,10 @@ elements:
     service: input_select.select_option
     service_data:
       entity_id: input_select.floorplan_floor
-      option: Övreplan
+      option: Övervåning
     style:
-      top: 10%
-      left: 10%
+      top: 20%
+      left: 56%
       background: "#d8d7d9"
       border-radius: 5%
       border: 2px solid black
